# ROS-Navigation

./: .gitignore  README.md
Reference/AGV_refactor/: .gitignore  README.md
Reference/AGV_refactor/app_ros/: readme.md
Reference/AGV_refactor/arucoNav-master/: CMakeCache.txt  CMakeLists.txt  CameraCalibrationOutput  Makefile  arucoDetect.cpp  arucoTest  cmake_install.cmake  turnCameraOn
Reference/AGV_refactor/ceiling_ros/: readme.md
Reference/AGV_refactor/ceiling_socket/: CMakeLists.txt  Main.cpp  MainOrig.cpp  Main_backup.cpp
Reference/AGV_refactor/ceiling_socket/Communication/: SocketConnection.cpp
Reference/AGV_refactor/ceiling_socket/DataStructures/: PixelState.h  State.h  System.h  TransitionRegion.cpp  TransitionRegion.h
Reference/AGV_refactor/ceiling_socket/Imaging/: Aruco.cpp  Aruco.h  CeilingObjectDetection.cpp  CeilingObjectDetection.h  ImageProcessing.cpp  ImageProcessing.h
Reference/AGV_refactor/ceiling_socket/Imaging/CalibrationFiles/: CameraCalibrationOutput
Reference/AGV_refactor/ceiling_socket/RobotControl/: Comparators.h  Planner.cpp  Planner.h
Reference/AGV_refactor/central_server/: readme.md  rsyncACam1.sh  rsyncSCam1.sh  rsyncSCam3.sh
Reference/AGV_refactor/ground_ros/: readme.md
Reference/AGV_refactor/ground_socket/: readme.md
Reference/AGV_refactor/ground_socket/withCam/: CMakeLists.txt  main.cpp  tickPathProp.side  tickPathPropBackup.c
Reference/AGV_refactor/path_from_laptop/: readme.md
Reference/AGV_refactor/rest/: botInfo.txt  (+10 more)
Reference/WaypointGraphs/: GNGTest.py  GrowingNeuralGas.py  GrowingNeuralGasTest.py
Reference/waypoints/: README.md
Reference/waypoints/generation/: CMakeCache.txt  CMakeLists.txt  CeilingObjectDetection.cpp  CeilingObjectDetection.h  Comparators.h  HashTable.cpp  HashTable.h  ImageProcessing.cpp  ImageProcessing.h  Main.cpp  MainOrig.cpp  Main_backup.cpp  Makefile  MeanShift.h  Node.h  PathFindingTest  PathLookup.h  PixelState.cpp  PixelState.h  Planner.cpp  Planner.h  README.md  RobotDetection.cpp  RobotDetection.h  SocketConnection.h  State.h  System.h  TransitionPoint.h  TransitionRegion.h  cmake_install.cmake  path.txt  savedPaths.txt
Updated_GNG_Generation/: GNGTest.py  readme.md  test.py
Updated_GNG_Generation/Camera1/: readme.md
WaypointGraphs/: Camera.py  GrowingNeuralGas.py  GrowingNeuralGasTest.py  MakeGif.py  README.md  TestImagetoCameraGrid.py
WaypointGraphs/Utils/: ConvertImageToGreyscale.py
discmahn_cameras/: CMakeLists.txt  package.xml
discmahn_cameras/config/: RVizTesting.rviz  webcam.yaml
discmahn_cameras/launch/: ROSImportStream.launch  WebcamTFPublsiher.launch  discmahn.launch
discmahn_cameras/scripts/: LaunchCameraCalibration.sh  MarkerArrayTest.py  MarkerTest.py  ShowWebcamMarker.py
robot_tracking/: CMakeLists.txt  package.xml
robot_tracking/launch/: track_default_pattern.launch  track_qr_code.launch  track_qr_usb_cam_calibrated.launch
robot_tracking/models/: calibration.ini  calibration_microsoft_lifecam.yml  pattern.cao  pattern.wrl  pattern.xml  robot_qr_code.cao  robot_qr_code.cfg  robot_qr_code.wrl
(+135 files in other folders)
